[package]
name = "expensive"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "Terminal dashboard for OpenCode token usage and spend"
repository = "https://github.com/lindestad/expensive"
homepage = "https://github.com/lindestad/expensive"
documentation = "https://docs.rs/expensive"
readme = "README.md"
keywords = ["opencode", "tui", "tokens", "ratatui"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
dirs = "5"
ratatui = "0.29"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
